spacing fix

--- a/style.css
+++ b/style.css
@@ -116,7 +116,7 @@ line-height:0.95em;
 }
 
 .itemtext{
-  margin: 0in 0in 0.1in 0in;
+  margin: 0in 0in 0in 0in;
 
 }
 
